using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Axis
{
    public const string HORIZONTAL = "Horizontal";
}
public class Tags
{
    public const string PLAYER = "Player";
    public const string OPPONENT = "Opponent";
    public const string TEXT = "Text";
    public const string PLAYER_FOLLOWER= "PlayerFollower";
    public const string START_PLATFORM = "StartPlatform";
    public const string PLATFORM = "Platform";
    public const string END_PLATFORM = "EndPlatform";
    public const string ROTATOR_PLATFORM = "RotatorPlatform";
    public const string STATIC_OBS = "StaticObs";
    public const string HORIZONTAL_OBS = "HorizontalObs";
    public const string DONUT_STICK = "DonutStick";
    public const string DONUT_SIDE = "DonutSide";
    public const string ROTATOR = "Rotator";
    public const string ROTATOR_STICK = "RotatorStick";
    public const string MOVING_STICK = "MovingStick";
    public const string CHECK_POINT = "CheckPoint";


}
public class AnimationTags
{
    public const string IDLE = "Idle";
    public const string RUN = "Run";
    public const string FALL = "Fall";
    public const string CELEBRATE = "Celebrate";
    

}